Frontend Completed: 1. Added login pages 2. NavBar is changed 3. footer is updated 4. Features section text  overflow  is fixed 5. Rules page form elements overflow is fixed 6. Rules page navbar is changed

--- a/views/style.css
+++ b/views/style.css
@@ -15,53 +15,9 @@ header{
     background-attachment: fixed;
     
 }
-nav{
-    width: 100%;
-    height: 80px;
-    background-color: white;
-    color: black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px 80px;
-   position:relative;
-    top: 0px;
 
-}
-.logo{
-    font-family: sans-serif;
-    font-size: 2em;
-    display: flex;
-    
-}
-form{
-    margin-top:30px;
-}
-.pasta{
-    margin-right:20px;
-}
 .logo-h{
     color: cadetblue;
-}
-.menu a{
-    text-decoration: none;
-    color: black;
-    padding: 10px 20px;
-    font-family: sans-serif;
-    font-size: 20px;
-    margin-left: 35rem;
-}
-.menu a:first-child{
-    color: #2081ab;
-}
-.menu a:hover{
-    color: #4CAF50;
-}
-.icon i{
-    font-size: 20px;
-}
-.icon i:hover{
-    color: #2081ab;
 }
 
 /* login css */
@@ -81,28 +37,17 @@ form{
 
 /*  */
 
-.icon a{
-    text-decoration: none;
-    padding:10px 20px;
-    color: white;
-    background: #2081ab;
-    margin-left: 30px;
-    border-radius: 5px;
-}
-
 .h-text{
     color: white;
     max-width: 700px;
     position: absolute;
+    height: 100vh;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     text-align: center;
 }
-#camera{
-    font-size: 40px;
-    margin-bottom: 10px;
-}
+
 .h-text h1{
     font-family: sans-serif;
     font-size: 3em;
@@ -129,191 +74,52 @@ form{
 
 }
 
-.filtergallery{
-    padding: 100px;
-   
-}
-.portfolio-menu{
-    text-align:center;
-    margin-bottom:20px;
-    
-}
-.portfolio-menu ul li{
-    list-style:none;
-    display: inline-block;
-    margin: 20px 0px;
-    font-size: 20px;
-    font-family: sans-serif;
-    font-weight: bold;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: 0.5s ease;
-    text-align: center;
-}
-.portfolio-menu ul li:hover{
-    color: white;
-    background: #116f66;
-    border-radius: 8px;
-}
 li.active{
     color: white;
     background: #1c6787;
     border-radius: 8px;
 }
-.portfolio-item{
-    width: 100%;
-}
-.portfolio-item .item{
-    width: 360px;
-    height: 360px;
-    float: left;
-    margin-bottom: 20px;
-    margin-right: 20px;
-   
-}
-.portfolio-item .item img{
-    width: 100%;
-    height: 100%;
-    border-radius: 8px;
-    
-   
-}
-.member{
-    width: 100%;
-    padding: 20px 100px;
-    font-family: sans-serif;
-}
-.member-info{
-    text-align: center;
-}
-.member-info h1{
-    font-size: 2.5em;
-}
-.member-info h1 span{
-    color: #e74c3c;
-} 
-.member-card{
-    text-align: center;
-    padding: 20px;
-    width: 50%;
-    margin:auto;
-}
-.member-card p{
-    margin:20px 0px;
-    line-height: 2em;
-}
-.m-images{
-    width: 100;
-    display: flex;
-    margin: 20px 0px;
-    overflow: hidden;
-}
-.m-images img{
-    width: 200px;
-    height: 200px;
-    cursor: pointer;
-    transition: 0.4s ease-in-out;
-}
-.m-images img:hover{
-    transform: scale(1.5);
-}
 
-.newslatter{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px;
-    border: 1px solid rgba(255,255,255,0.2);
-    color: white;
-}
-.newslatter >div{
-    flex-basis: 50%;
-}
 .ntext{
     text-align: right;
-}
-.newslatter h2{
-    font-size: 2em;
-    font-family: sans-serif;
-}
-.newslatter p{
-    font-size: 20px;
-    margin: 10px;
-}
-.newslatter label{
-    position: relative;
-
-}
-.newslatter input{
-    padding: 20px;
-    width: 70%;
-    border-radius: 8px;
-    border: none;
-    outline: none;
-    font-family: sans-serif;
-}
-.newslatter button{
-    position: absolute;
-    right: 0;
-    padding: 20px;
-    width: 30%;
-    background:#e74c3c;
-    color: white;
-    border: none;
-    outline: none;
-    border-radius: 0px 8px 8px 0px;
 }
 
 .footer {
     background-color: #1c6787;
     color: #fff;
-    padding: 20px 0;
+    padding: 20px 0 0 0;
     font-size: 14px;
+}.footer hr{
+    margin: 2% auto;
+    width: 90%;
 }
 
 .footer-container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
 }
 
-.footer-section {
-    flex: 1;
-    margin-bottom: 20px;
-}
-
-.footer-section h4 {
+.footer-container a {
     color: #b7b7b7;
-    font-size: 16px;
-    margin-bottom: 10px;
-}
-
-.footer-section ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.footer-section li {
-    margin-bottom: 8px;
-}
-
-.footer-section a {
-    color: #b7b7b7;
+    margin: 0 3%;
     text-decoration: none;
 }
 
-.footer-section a:hover {
+.footer-container a:hover {
     text-decoration: underline;
 }
 
 .footer-credits {
     text-align: center;
     margin-top: 20px;
+    padding-bottom: 1%;
+}.footer-credits p{
+    margin: 0;
 }
+
+
+
 h1{
 	position: relative;
 	font-size: 5px;
@@ -362,34 +168,24 @@ h1{
     background-color: white;
 }
 
-.container {
-
+.row > div{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    height: 450px; /* Set the height as needed */
+    height: 50vh;
 }
 
-
 .box {
-    margin: 40px;
-    height: 300px;
-    width: 400px;
-    padding: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    margin: 5%;
+    height: 35vh;
+    padding: 30px;
     background-color: #1c6787;
     color: #fff;
     text-align: center;
-    border-radius: 5px;
+    border-radius: 10px;
+    box-shadow: 0 0 15px #00000049;
 }
-.boxx p{
-    padding: 70px;
-}
-.box p{
-    padding: 30px;
-}
-
-
-
-
-
-
